- DC  Increased the resolution of pvr_stats_t from milli to nanoseconds [FG]
- *** Added support for modifying scheduler frequency at runtime [FG]
- *** Add support for worker threads [PC]
- DC  Added new System Calls module [AB]
- DC  Add timer_spin_delay_{us,ns} and use them in scif-spi [PC]
- *** Added thread support for tracking CPU time + updated clock_gettime() [FG]

KallistiOS version 2.0.0 -----------------------------------------------
- DC  Broadband Adapter driver fixes [Megan Potter == MP]
- *** Imported a new version of lwIP, with proper sockets lib [MP]
- DC  Added new httpd example for lwIP [MP]
- x86 Added incomplete ia32 port [MP]
- DC  Added new DC examples for Parallax (raster_melt, sinus, delay_cube,
      rotocube) [MP]
- *** Added svnpush.py script for pushing repositories on the web [MP]
- DC  Added genmenu module and example in Tsunami [Megan Potter == MP]
- DC  Added hello-mp3 example [MP]
- DC  320x240 PAL mode [mekanaizer == MK]
- *** Fixed vqenc and kmgenc headers to be ANSI compliant [MP]
- *** New addons/ports build system [MP]
- *** Moved most addons/ports into their own tree/distribution [MP]
- *** Moved several incorrectly placed pieces into libkosutils [MP]
- *** Imported port of Lua 5.0 [MP]
- DC  Added Tsunami Matrix class [MP]
- DC  Various improvements to Tsunami classes [MP]
- *** Major build system overhaul (see RELNOTES) [MP]
- DC  Improved MII/link status handling for BBA driver [MP]
- *** Added NONE thread mode [MP]
- *** lwIP select fixes [Walter van Niftrik == WvN]
- DC  GDB stub fixes [Richard Moats == RM]
- *** New bin2c [Gil Megidish == GM]
- *** Updated genromfs [MP]
- DC  Fixed and re-enabled SPU DMA module [MP]
- DC  Cleaned up PVR DMA functions, adding support for different DMA targets [MP]
- DC  Floating point register support for the GDB stub [RM]
- DC  Added G2 DMA pausing for G2 bus read/write calls [MP]
- *** Added UDP sendto/recvfrom calls in lwIP [MP]
- DC  Added DNS client lwIP example [MP]